--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "p4app-exercises/p4app"]
 	path = p4app-exercises/p4app
-	url = https://github.com/p4lang/p4app
+	url = https://github.com/2021-cs344/p4app
